@@ -378,7 +378,7 @@ guard
 		FriendlyReplies =
 		{
 			5,
-			"@Dd sounds annoyed. \"We do I have to work with these amateurs? They can't beat a rookie dark knight properly!\"",
+			"@Dd sounds annoyed. \"Why do I have to work with these amateurs? They can't beat a rookie dark knight properly!\"",
 			"\"Don't believe Haedlac if he boasts with that enner beast. In reality he fled immediately and the monster stepped on a land mine while chasing him.\"",
 			"@Dd shouts excited: \"Attnam victoor!\"",
 			"\"We are the Imperial Guard. Bow.\"",
