@@ -7,6 +7,11 @@ is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
 
+January 28 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Small typo in elite guard's talk corrected.
+	* Atavus healing bodyparts works now
+	
 January 27 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
 	* Shattering bottles with poison cause less damage to player.  
